--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="link" alt="" href="https://t.me/anikitinmb" target="_ blank"><i class='bx bxl-telegram'></i></a>
           <a class="link" href="https://wa.me/79176667457"><i class='bx bxl-whatsapp'></i></a>
           <a class="link" href="mailto:nikitinag23@gmail.com"><i class='bx bxl-google'></i></a>
-          <a class="link" href="https://github.com/uardVouba-qa" target="_ blank"><i class='bx bxl-github'></i></a>
+          <a class="link" href="https://github.com/AleksandrN-QA" target="_ blank"><i class='bx bxl-github'></i></a>
 
         </div>
         <div class="menu">
